--- a/E-Commerce/Views/Category/UpdateCategoryById.cshtml
+++ b/E-Commerce/Views/Category/UpdateCategoryById.cshtml
@@ -1,13 +1,18 @@
-﻿@model E_Commerce.ViewModel.CreateCategoryVM
+﻿@model E_Commerce.ViewModel.UpdateCategoryVM
 
 
-<h1>Add New Category</h1>
+
+<h1>Update Category By Id</h1>
+
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddNewCategory">
+        <form asp-action="UpdateCategoryById">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <input asp-for="Id" class="form-control" hidden/>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -19,7 +24,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
     </div>
