Implement Product Controller (Add,Delete,get) And Apply Pagination At getProdcuts

--- a/E-Commerce/Views/Category/UpdateCategory.cshtml
+++ b/E-Commerce/Views/Category/UpdateCategory.cshtml
@@ -16,7 +16,7 @@
         outline:none;
         padding:10px 15px;
         border-radius:10px;
-        transition:.5s;
+        transition:1s;
         margin:10px auto;
         width:85%;
         font-size:20px;
@@ -41,19 +41,30 @@
     }
 
     .buttons {
-        display:flex;
-        justify-content:space-between;
-        margin-top:30px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
     }
 
         .buttons .btn {
-        display:inline-block;
-        padding:8px 16px;
-        border: none;
-        outline: none;
-        background-color: rgba(140, 51, 255, 1);
-        margin:0 10px;
-    }
+            text-decoration: none;
+            display: inline-block;
+            padding: 10px 20px;
+            border: none;
+            outline: none;
+            background-color: rgba(140, 51, 255, 1);
+            margin: 0 10px;
+            border-radius: 8px;
+            color: white;
+            font-weight: bold;
+            transition: .5s;
+        }
+
+            .buttons .btn:hover {
+                cursor: pointer;
+                opacity: .9;
+                transform: scale(1.1);
+            }
 
     .text-danger{
         color:red;
@@ -65,7 +76,7 @@
 <div id="container">
     <div class="form">
         <h2>Update Category</h2>
-        <form id="updateForm" asp-action="UpdateCategory">
+        <form asp-action="UpdateCategory" asp-controller="Category" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="Id" class="form-control" hidden/>
@@ -81,45 +92,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="buttons">
-                <a class="btn" id="back">Back</a>
+                <a class="btn" asp-action="getAllCategory">Back</a>
                 <input class="btn" type="submit" value="Update"/>
             </div>
         </form>
     </div>
 </div>
 
-<script>
-    $(document).on('click', '#back', function () {
-        $.ajax({
-            url: "/Category/getAllCategory",
-            type: 'GET',
-            success: function (data) {
-                $("#container").html(data);
-            }
-        });
-    });
-</script>
 
-<script>
-    $(document).ready(function () {
-        $('#updateForm').submit(function (e) {
-            e.preventDefault(); // Prevent the default form submission.
-
-            const form = $(this);
-            const formData = form.serialize(); // Serialize the form data.
-
-            // Step 1: Send update request to the server
-            $.ajax({
-                url: "/Category/UpdateCategory", // The form's action URL.
-                type: 'POST',
-                data: formData,
-                success: function (data) {
-                    $("#container").html(data);
-                },
-            });
-        });
-    });
-</script>
 
 
 @section Scripts {
