--- a/E-Commerce/Views/Category/AddNewCategory.cshtml
+++ b/E-Commerce/Views/Category/AddNewCategory.cshtml
@@ -1,131 +1,33 @@
 ﻿@model E_Commerce.ViewModel.CreateCategoryVM
 
 
-
-<style>
-    .form {
-        width: 350px;
-        padding: 20px;
-        background-color: gray;
-        border-radius: 10px;
-        margin: 1rem auto;
-        opacity: .7;
-    }
-
-    .form-group input {
-        background-color: rgba(246, 245, 245, 1);
-        border: none;
-        outline: none;
-        padding: 10px 15px;
-        border-radius: 10px;
-        transition: 1s;
-        margin: 10px auto;
-        width: 85%;
-        font-size: 20px;
-    }
-
-    .form label {
-        font-weight: bold;
-        display: block;
-    }
-
-
-    .form input:hover {
-        transform: scale(1.05);
-    }
-
-    .form h2 {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .form-group {
-        margin: 10px 0;
-    }
-
-    .buttons {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 30px;
-    }
-
-        .buttons .btn {
-            display: inline-block;
-            padding: 8px 16px;
-            border: none;
-            outline: none;
-            background-color: rgba(140, 51, 255, 1);
-            margin: 0 10px;
-        }
-
-    .text-danger {
-        color: red;
-        font-size: 15px;
-    }
-</style>
-
-
-<div id="container">
-    <div class="form">
-        <h2>Add New Category</h2>
-        <form id="AddForm" asp-action="AddNewCategory">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input asp-for="Name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <input asp-for="Description" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="buttons">
-                <a class="btn" id="back">Back</a>
-                <input class="btn" type="submit" value="Add" />
-            </div>
-        </form>
-    </div>
+<div class="form">
+    <h2>Add New Category</h2>
+    <form id="AddForm" asp-action="AddNewCategory" method="post">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Name"></label>
+            <input asp-for="Name" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Description"></label>
+            <input asp-for="Description" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="buttons">
+            <a class="btn" asp-action="getAllCategory">Back</a>
+            <input class="btn" type="submit" value="Add" />
+        </div>
+    </form>
 </div>
 
 
-<script>
-    $(document).on('click', '#back', function () {
-        $.ajax({
-            url: "/Category/getAllCategory",
-            type: 'GET',
-            success: function (data) {
-                $("#container").html(data);
-            }
-        });
-    });
-</script>
-
-<script>
-    $(document).ready(function () {
-        $('#AddForm').submit(function (e) {
-            e.preventDefault(); // Prevent the default form submission.
-            const form = $(this);
-            const formData = form.serialize(); // Serialize the form data.
-            // Step 1: Send update request to the server
-            $.ajax({
-                url: "/Category/AddNewCategory", // The form's action URL.
-                type: 'POST',
-                data: formData,
-                success: function (data) {
-                    $("#container").html(data);
-                },
-            });
-        });
-    });
-</script>
 
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+
+
+
 
 
 
