--- a/E-Commerce/Views/Category/DeleteCategory.cshtml
+++ b/E-Commerce/Views/Category/DeleteCategory.cshtml
@@ -23,42 +23,33 @@
                 font-size: 1.75rem;
             }
 
-    .button {
+    .buttons {
         display: flex;
-        justify-content: center;
-        gap: 1rem;
-        margin-top: 2rem;
+        justify-content: space-between;
+        margin: 30px  50px 0px 50px;
     }
 
-    .btn {
-        padding: 0.75rem 2rem;
-        border-radius: 6px;
-        text-decoration: none;
-        font-weight: 500;
-        transition: all 0.5s ease;
-        cursor: pointer;
-    }
-
-    #back {
-        background-color: #f3f4f6;
-        color: #333;
-        border: 1px solid #e5e7eb;
-    }
-
-        #back:hover {
-            opacity: .8;
-            background-color: #e5e7eb;
+        .buttons .btn {
+            text-decoration: none;
+            display: inline-block;
+            padding: 15px 25px;
+            border: none;
+            outline: none;
+            background-color: rgba(140, 51, 255, 1);
+            margin: 0 10px;
+            border-radius: 8px;
+            color: white;
+            font-weight: bold;
+            transition: .5s;
         }
 
-    #confirmDelete {
-        background-color: #e11d48;
-        color: white;
-    }
+            .buttons .btn:hover {
+                cursor: pointer;
+                opacity: .9;
+                transform: scale(1.1);
+            }
 
-        #confirmDelete:hover {
-            opacity:.8;
-            background-color: #be123c;
-        }
+
 
 </style>
 <div id="container">
@@ -67,41 +58,12 @@
         <h2>Are You Sure You Want To Delete ?</h2>
         <h2>@Model.Name</h2>
         <h2>@Model.Description</h2>
-        <div class="button">
-            <a id="back" class="btn">Back</a>
-            <a id="confirmDelete" data-id="@Model.CategoryId" class="btn">Delete</a>
+        <div class="buttons">
+            <a  class="btn" asp-action="getAllCategory" asp-controller="Category">Back</a>
+            <a  class="btn" asp-action="ConfirmDelete" asp-route-Id="@Model.CategoryId" asp-controller="Category">Delete</a>
         </div>
     </div>
 </div>
-
-
-<script>
-    $(document).on('click', '#back', function () {
-        $.ajax({
-            url: "/Category/getAllCategory",
-            type: 'GET',
-            success: function (data) {
-                $("#container").html(data);
-            }
-        });
-    });
-</script>
-
-<script>
-    $(document).on('click', '#confirmDelete', function () {
-        var CategoryId = $(this).data('id');
-        $.ajax({
-            url: "/Category/ConfirmDelete/" + CategoryId,
-            type : 'POST',
-            success : function (data)
-            {
-                $("#container").html(data);
-            }
-            
-        })
-    })
-</script>
-
 
 
 
