--- a/E-Commerce/Views/Shared/_MainLayout.cshtml
+++ b/E-Commerce/Views/Shared/_MainLayout.cshtml
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />  *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/getAllCategory.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/AddNewCategory.css" asp-append-version="true" />
 @*     <link rel="stylesheet" href="~/E_Commerce.styles.css" asp-append-version="true" /> *@
 
 </head>
 <body>
     <div class="Header">
         <h2>E-Commerce</h2>
-        <ul class="Nav">
-            <li  onclick="ChangeColor(this)">Home</li>
-            <li  onclick="ChangeColor(this)">Offer</li>
-            <li id="category"  onclick="ChangeColor(this)">Category</li>
-            <li  onclick="ChangeColor(this)">history</li>
-            <li  onclick="ChangeColor(this)">Wishlist</li>
-            <li  onclick="ChangeColor(this)">Cart</li>
-            <li  onclick="ChangeColor(this)">Acount</li>
-            <li  onclick="ChangeColor(this)">Logout</li>
-        </ul>
+        <Div class="Nav">
+            <a  onclick="ChangeColor(this)">Home</a>
+            <a  onclick="ChangeColor(this)">Offer</a>
+            <a  onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Category</a>
+            <a  onclick="ChangeColor(this)" asp-action="getProductsAtPadge" asp-route-padgeNumber="1" asp-controller="Product">Product</a>
+            <a  onclick="ChangeColor(this)">history</a>
+            <a  onclick="ChangeColor(this)">Wishlist</a>
+            <a  onclick="ChangeColor(this)">Cart</a>
+            <a  onclick="ChangeColor(this)">Acount</a>
+            <a  onclick="ChangeColor(this)">Logout</a>
+        </Div>
     </div>
 
     <div class="content">
@@ -34,27 +37,13 @@
         <h3>Contact : ahmedatefabdelazeem@gmail.com</h3>
     </div>
 
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
     <script src="~/js/site.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#category').click(function () {
-                // Make AJAX request
-                $.ajax({
-                    url: "Category/getAllCategory",
-                    type: 'GET', 
-                    success: function (response) {
-                        $('.content').html(response);
-                    }
-                });
-            });
-        });
-    </script>
 
 </body>
 </html>
