--- a/E-Commerce/Views/Shared/_MainLayout.cshtml
+++ b/E-Commerce/Views/Shared/_MainLayout.cshtml
@@ -25,7 +25,7 @@
             <a  onclick="ChangeColor(this)">Acount</a>
             <a  onclick="ChangeColor(this)">Logout</a> *@
 
-            <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Home</a>
+            <a onclick="ChangeColor(this)" asp-action="Index" asp-controller="Home">Home</a>
             <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Category</a>
             <a onclick="ChangeColor(this)" asp-action="getProductsAtPadge" asp-route-padgeNumber="1" asp-route-Category="All" asp-controller="Product">Product</a>
             <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Offer</a>
