Create Register With Validation

--- a/E-Commerce/Views/Shared/_MainLayout.cshtml
+++ b/E-Commerce/Views/Shared/_MainLayout.cshtml
@@ -34,6 +34,7 @@
             <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Cart</a>
             <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Acount</a>
             <a onclick="ChangeColor(this)" asp-action="getAllCategory" asp-controller="Category">Logout</a>
+            <a onclick="ChangeColor(this)" asp-action="Register" asp-controller="Acount">Register</a>
         </Div>
     </div>
 
